@@ -7,7 +7,7 @@ from .web import create_app_from_file
 from . import MAILADM_SYSCONFIG_PATH
 
 
-config_fn = os.environ.get("MAILADM_CONFIG")
+config_fn = os.environ.get("MAILADM_CFG")
 if config_fn is None and os.path.exists(MAILADM_SYSCONFIG_PATH):
     config_fn = MAILADM_SYSCONFIG_PATH
 
