@@ -3,13 +3,13 @@ import pytest
 
 
 def test_no_config(monkeypatch):
-    monkeypatch.delenv("MAILADM_CONFIG", raising=False)
+    monkeypatch.delenv("MAILADM_CFG", raising=False)
     with pytest.raises(RuntimeError):
         import mailadm.app  # noqa
 
 
 def test_env(config, monkeypatch):
-    monkeypatch.setenv("MAILADM_CONFIG", config.path)
+    monkeypatch.setenv("MAILADM_CFG", config.path)
     from mailadm.app import app
     assert app.mailadm_config.cfg.path == config.path
 
